force-app/main/default/objects/PhaseGate__c/PhaseGate__c.object-meta.xml
<CustomObject>
    <label>フェーズゲート</label>
    <nameField>
        <displayFormat>PhaseGate-{0000}</displayFormat>
        <label>フェーズゲート名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>