force-app/main/default/objects/PhaseGate__c/fields/AfterStageMandatoryFieldsErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>AfterStageMandatoryFieldsErrorMessage__c</fullName>
    <label>後フェーズ必須項目エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>