force-app/main/default/objects/PhaseGate__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>この項目には項目のAPI名を記述してください。</inlineHelpText>
    <label>チェック項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>