force-app/main/default/objects/PhaseGate__c/fields/MandatoryFieldsErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>MandatoryFieldsErrorMessage__c</fullName>
    <label>必須項目エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>