force-app/main/default/objects/PhaseGate__c/fields/MessageCompany__c.field-meta.xml
<CustomField>
    <fullName>MessageCompany__c</fullName>
    <label>メッセージ_企業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>