force-app/main/default/objects/PhaseGate__c/fields/MessageOperator__c.field-meta.xml
<CustomField>
    <fullName>MessageOperator__c</fullName>
    <label>メッセージ_オペレーター</label>
    <length>255</length>
    <type>Text</type>
</CustomField>