force-app/main/default/objects/PhaseGate__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>業務</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewMatter__c</fullName>
                <default>true</default>
                <label>新規</label>
            </value>
            <value>
                <fullName>Cancel__c</fullName>
                <label>解約申入</label>
            </value>
            <value>
                <fullName>CancelCalculate__c</fullName>
                <label>解約精算</label>
            </value>
            <value>
                <fullName>Renewal__c</fullName>
                <label>更新</label>
            </value>
            <value>
                <fullName>ConditionChange__c</fullName>
                <label>条件変更</label>
            </value>
            <value>
                <fullName>Case</fullName>
                <label>ケース</label>
            </value>
            <value>
                <fullName>Change__c</fullName>
                <label>入替</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>