force-app/main/default/objects/PhaseGate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>