force-app/main/default/objects/PhaseGate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必須項目</fullName>
            </value>
            <value>
                <fullName>表示メッセージ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>