force-app/main/default/objects/PhaseGate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Step__c</columns>
    <columns>Field__c</columns>
    <columns>Operation__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>